# publish

./: .env.example  .gitignore  CLAUDE.md  README.md  backup.dump  docker-compose.yml  index.html  main.py  pyproject.toml  schema.sql
.beads/: issues.jsonl
alembic/: env.py
docs/: prd-newsletter.md
scripts/: backup.sh  restore.sh
src/distillyzer/: __init__.py  artifacts.py  cli.py  db.py  embed.py  extract.py  harvest.py  mcp_server.py  query.py  scoring.py  transcribe.py  visualize.py
src/publishing/: __init__.py  artifacts.py  cli.py  db.py  embed.py  harvest.py  mcp_server.py  scoring.py  search_queries.py  transcribe.py  visualize.py
tests/: conftest.py  test_cli_suggest.py  test_db.py  test_embed.py  test_extract.py  test_harvest.py  test_query.py  test_scoring.py  test_search_queries.py  test_transcribe.py
